テスト用に変更

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Naonari アプリ</h1>
     </div>
 
-    <a href="./page/kiyaku.html">利用規約・プライバシーポリシー</a>
+    <a href="./page/kiyaku.html">利用規約・プライバシーポリシ</a>
 </body>
 
 </html>
