--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-    <div class="title">
-        <h1>Naonari アプリ</h1>
+    <div class="HeaderArea">
+        <div class="title">Naonari アプリ</div>
     </div>
+    <div class="MainArea">
+        <a href="./page/kiyaku.html">利用規約・プライバシーポリシー</a>
+    </div>
+    <div class="FooterArea">
 
-    <a href="./page/kiyaku.html">利用規約・プライバシーポリシ</a>
+    </div>
 </body>
 
 </html>
