--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
         <div class="title">Naonari アプリ</div>
     </div>
     <div class="MainArea">
-        <a href="./page/kiyaku.html">利用規約・プライバシーポリシー</a>
+        <img src="./img/3197063_m.jpg">
     </div>
     <div class="FooterArea">
-
+        <hr>
+        <div class="links">
+            <ul>
+                <li><a href="./page/kiyaku.html">アプリ紹介</a></li>
+                <li><a href="./page/kiyaku.html">利用規約・プライバシーポリシー</a></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <label>Copyright ©️ 2021 Naonari. All Rights Reserved.</label>
+        </div>
     </div>
 </body>
 
