--- a/pageCommon/navArea.html
+++ b/pageCommon/navArea.html
@@ -3,8 +3,7 @@
         <div class="inner">
             <ul>
                 <li><a href="#">アプリ紹介</a></li>
-                <li><a href="#">プライバシーポリシー</a></li>
-                <li><a href="#">利用規約</a></li>
+                <li><a href="#">利用規約・<br />プライバシーポリシー</a></li>
             </ul>
         </div>
     </nav>
