--- a/index.html
+++ b/index.html
@@ -13,12 +13,66 @@
     <script>
         //共通パーツの読み込み
         $(function () {
-            $("#navArea").load("navArea.html");
-            $("#HeaderArea").load("headerArea.html");
-            $("#FooterArea").load("footerArea.html");
-            $("#scriptLoad").load("scriptLoad.html");
+            $("#navArea").load("./pageCommon/navArea.html");
+            $("#HeaderArea").load("./pageCommon/headerArea.html");
+            $("#FooterArea").load("./pageCommon/footerArea.html");
+            $("#scriptLoad").load("./pageCommon/scriptLoad.html");
         });
     </script>
+    <style>
+        .MainContent {
+            width: 100%;
+        }
+
+        .MainContent img {
+            width: 100%;
+            height: 220px;
+            object-fit: cover;
+            object-position: 0 70%;
+            opacity: 0.8;
+        }
+        .MainContent_TopText {
+            font-size: medium;
+            color: var(--font-base-color);
+            text-align: center;
+        }
+        .MainContent_navList {
+            margin-top: 80px;
+            width: 100%;
+            text-align: center;
+        }
+
+        .MainContent_navList_item {
+            display: inline-block;
+            width: 60%;
+            max-width: 300px;
+            border: 1px solid var(--font-base-color);
+            border-radius: 10px;
+        }
+
+        .MainContent_navList_item img {
+            width: 100%;
+            max-height: 150px;
+            border-radius: 10px 10px 0 0;
+            z-index: 8;
+        }
+
+        .MainContent_navList_item div {
+            display: flex;
+            width: 100%;
+            height: 40px;
+            margin-top: -5px;
+            background-color: var(--bg-main-color);
+            color: var(--font-main-color);
+            border-radius: 0 0 9px 9px;
+            align-items: center;
+            text-align: center;
+        }
+
+        .MainContent_navList_item p {
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
