--- a/pageCommon/footerArea.html
+++ b/pageCommon/footerArea.html
@@ -2,9 +2,8 @@
     <div class="FooterContent">
         <div class="links">
             <ul>
-                <li><a href="kiyaku.html">アプリ紹介</a></li>
-                <li><a href="kiyaku.html">プライバシーポリシー</a></li>
-                <li><a href="kiyaku.html">利用規約</a></li>
+                <li><a href="../kiyaku.html">アプリ紹介</a></li>
+                <li><a href="../kiyaku.html">利用規約・プライバシーポリシー</a></li>
             </ul>
         </div>
         <div class="copyright">
