ソース整理版

--- a/pageCommon/navArea.html
+++ b/pageCommon/navArea.html
@@ -3,7 +3,8 @@
         <div class="inner">
             <ul>
                 <li><a href="#">アプリ紹介</a></li>
-                <li><a href="#">利用規約・<br />プライバシーポリシー</a></li>
+                <li><a href="../kiyaku.html">利用規約・<br />プライバシーポリシー</a></li>
+                <li><a href="../toiawase.html">お問い合わせ</a></li>
             </ul>
         </div>
     </nav>
@@ -15,4 +16,8 @@
     </div>
 
     <div id="mask"></div>
+</div>
+<div id="scriptLoad">
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="../js/common.js"></script>
 </div>
