--- a/pageCommon/footerArea.html
+++ b/pageCommon/footerArea.html
@@ -4,6 +4,7 @@
             <ul>
                 <li><a href="../kiyaku.html">アプリ紹介</a></li>
                 <li><a href="../kiyaku.html">利用規約・プライバシーポリシー</a></li>
+                <li><a href="../toiawase.html">お問い合わせ</a></li>
             </ul>
         </div>
         <div class="copyright">
