Appページ作成途中

--- a/pageCommon/footerArea.html
+++ b/pageCommon/footerArea.html
@@ -2,13 +2,18 @@
     <div class="FooterContent">
         <div class="links">
             <ul>
-                <li><a href="../kiyaku.html">アプリ紹介</a></li>
-                <li><a href="../kiyaku.html">利用規約・プライバシーポリシー</a></li>
-                <li><a href="../toiawase.html">お問い合わせ</a></li>
+                <li><a id="linkApp" href="../appPage/appMain.html">アプリ紹介</a></li>
+                <li><a id="linkKiyaku" href="../kiyaku.html">利用規約・プライバシーポリシー</a></li>
+                <li><a id="linkToiawase" href="../toiawase.html">お問い合わせ</a></li>
             </ul>
         </div>
         <div class="copyright">
             <label>Copyright &copy; 2021 Naonari. All Rights Reserved.</label>
         </div>
     </div>
+</div>
+
+<div id="scriptLoad">
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="../js/common.js"></script>
 </div>
