--- a/appPage/appMain.html
+++ b/appPage/appMain.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Naonariアプリ</title>
+    <title>アプリ紹介</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
     <meta http-equiv="content-type" charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -87,12 +87,11 @@
             <img src="./img/3197063_m.jpg">
 
             <div class="MainContent_TopText">
-                <p>ほんの些細な"あったらいいな"を</p>
-                <p> カタチにしたい</p>
+                <p>アプリ紹介</p>
             </div>
             <div class="MainContent_navList">
                 <div class="MainContent_navList_item">
-                    <a href="appPage/appMain.html">
+                    <a href="#">
                         <img src="img/5142200_s.jpg">
                         <div>
                             <p>アプリ紹介</p>
