--- a/pageCommon/navArea.html
+++ b/pageCommon/navArea.html
@@ -2,9 +2,9 @@
     <nav>
         <div class="inner">
             <ul>
-                <li><a href="#">アプリ紹介</a></li>
-                <li><a href="../kiyaku.html">利用規約・<br />プライバシーポリシー</a></li>
-                <li><a href="../toiawase.html">お問い合わせ</a></li>
+                <li><a id="linkApp" href="../appPage/appMain.html">アプリ紹介</a></li>
+                <li><a id="linkKiyaku" href="../kiyaku.html">利用規約・<br />プライバシーポリシー</a></li>
+                <li><a id="linkToiawase" href="../toiawase.html">お問い合わせ</a></li>
             </ul>
         </div>
     </nav>
