アイコン追加

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Naonariアプリ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
     <meta http-equiv="content-type" charset="UTF-8">
+    <link rel="icon" href="icon_118701_256.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
