--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- メインエリア -->
     <div id="MainArea">
         <div class="MainContent">
-            <img src="./img/3197063_m.jpg">
+            <img src="./img/top/3197063_m.jpg">
 
             <div class="MainContent_TopText">
                 <p>ほんの些細な"あったらいいな"を</p>
@@ -94,7 +94,7 @@
             <div class="MainContent_navList">
                 <div class="MainContent_navList_item">
                     <a href="appPage/appMain.html">
-                        <img src="img/5142200_s.jpg">
+                        <img src="img/top/5142200_s.jpg">
                         <div>
                             <p>アプリ紹介</p>
                         </div>
