キャッシュ対応

--- a/pageCommon/footerArea.html
+++ b/pageCommon/footerArea.html
@@ -15,5 +15,5 @@
 
 <div id="scriptLoad">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="../js/common.js"></script>
+    <script type="text/javascript" src="../js/common.js?p=(new Date()).getTime()"></script>
 </div>
