--- a/kiyaku.html
+++ b/kiyaku.html
@@ -4,6 +4,9 @@
 <head>
     <title>利用規約・プライバシーポリシー</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <meta http-equiv="content-type" charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
