--- a/pageCommon/navArea.html
+++ b/pageCommon/navArea.html
@@ -19,5 +19,5 @@
 </div>
 <div id="scriptLoad">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="../js/common.js"></script>
+    <script type="text/javascript" src="../js/common.js?p=(new Date()).getTime()"></script>
 </div>
