Scriptキャッシュ対応

--- a/pageCommon/footerArea.html
+++ b/pageCommon/footerArea.html
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<div id="scriptLoad">
+<!-- <div id="scriptLoad">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="../js/common.js?p=(new Date()).getTime()"></script>
-</div>
+    <script type="text/javascript" src="../js/common.js"></script>
+</div> -->
